--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass-chokidar": "^1.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-flag-kit": "0.2.3",
     "react-scripts": "1.1.4"
   },
   "scripts": {
